--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.77.1",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
